# prompt-ultime

./: .gitignore  .render.yaml  API.save  Document 1 sans titre  IA1.json  README.md  audit-etapes.js  audit_report.json  audit_structure.js  autoFixJson.cjs  autoFixJson.js  auto_fix_index.sh  build.js  check-json-validity.js  compareTrees.cjs  corriger-et-pusher.sh  corriger-index-structure.cjs  corriger.cjs  corriger_tout.sh  deplacer_json_public.sh  deplacer_schemas.sh  deplacer_schemas_et_commit.sh  deploy.sh  diagnose_render.sh  etape_2_lunettes.json  etape_3_lecture_croisee.json  etape_5_resonance_finale.json  fix-render.sh  index.html  lunettes.json  lunettes_brutes.txt  masques_symboliques.json  nettoyeur-schemas.js  package-lock.json  package.json  prompt-ultime_tree.txt  prompt_ultime_schema.sql  reconstruire_depuis_IA1.py  reconstruire_fichiers_json.py  recuperer_json.sh  (+19 more)
alembic/: env.py
etapes/: etape_0_observation.json
lunettes/: lunettes_biais_cognitifs_1.json  lunettes_croyances_culturelles_limitantes_2.json
prompt-ultime/: one-shot.sh  setup.sh  setup2.sh  setup3.sh  setup4.sh
public/: IA1.json  PromptV3.08.05.25.docx  admin.html  admin.js  axes_autistiques.bak.json  axes_autistiques.json  compagnons_symboliques.bak.json  compagnons_symboliques.json  comparer_json.py  etape_0_seuil_entree.bak.json  etape_0_seuil_entree.json  etape_1_observation.json  etape_2_lunettes.bak.json  etape_2_lunettes.json  etape_3_lecture_croisee.bak.json  etape_3_lecture_croisee.json  etape_6_restitution.json  (+18 more)
src/: db.py  main.py  models.py  pyproject.toml  routes.py
(+66 files in other folders)
